Syp animation layout issue fix

--- a/src/app/activities/syp/syp.component.scss
+++ b/src/app/activities/syp/syp.component.scss
@@ -32,6 +32,7 @@
 	display: flex;
     position: relative;
     max-width: 18%;
+    align-items: center;
 }
 .syp-card-letter{
 	text-align: center;
